# pytsg

./: .gitignore  .gitmodules  CITATION.cff  README.md  cras_improvment.py  decode_hyspec.py  pyproject.toml  pyrexia.toml  pytsg.code-workspace  pytsg.toml  read_cras  requirements.txt  setup.py  tox.ini
.github/workflows/: python-publish.yml
doc/source/: conf.py  index.rst
doc/source/api/: modules.rst
doc/source/auto_examples/: index.rst
doc/source/glossary/: glossary.rst
doc/source/installation/: installation.rst
doc/source/quick-start/: quick-start.rst
example_data/GSNSW_testrocks/: HL4_testrocks_tsg.bip  HL4_testrocks_tsg.tsg  HL4_testrocks_tsg_mir.bip  HL4_testrocks_tsg_mir.tsg  HL4_testrocks_tsg_tir.bip  HL4_testrocks_tsg_tir.tsg
example_data/PE257D/: PE257D_0001_tsg.bip  PE257D_0001_tsg.tsg  PE257D_0001_tsg_mir.bip  PE257D_0001_tsg_mir.tsg  PE257D_0001_tsg_tir.bip  PE257D_0001_tsg_tir.tsg
example_data/SWMB007d/: SWMB007d_chips_tsg.bip  SWMB007d_chips_tsg.ini  SWMB007d_chips_tsg.tsg  SWMB007d_chips_tsg_1.ini  SWMB007d_chips_tsg_cras.bip  SWMB007d_chips_tsg_tir.bip  SWMB007d_chips_tsg_tir.ini  SWMB007d_chips_tsg_tir.tsg
example_data/SWMB007s/: SWMB007s_chips_tsg.bip  SWMB007s_chips_tsg.ini  SWMB007s_chips_tsg.tsg  SWMB007s_chips_tsg_1.ini  SWMB007s_chips_tsg_cras.bip  SWMB007s_chips_tsg_tir.bip  SWMB007s_chips_tsg_tir.ini  SWMB007s_chips_tsg_tir.tsg
example_data/SWMB008d/: SWMB008d_chips_tsg.bip  SWMB008d_chips_tsg.ini  SWMB008d_chips_tsg.tsg  SWMB008d_chips_tsg_1.ini  SWMB008d_chips_tsg_cras.bip  SWMB008d_chips_tsg_tir.bip  SWMB008d_chips_tsg_tir.ini  SWMB008d_chips_tsg_tir.tsg
examples/: README.rst  simple_read.py  specific_read.py
src/pyrexia/: parse_tsg.py
src/pytsg/: feature.py  parse_tsg.py
tests/: quick_test.py  test_features.py  test_reader.py
