[tool.poetry]
name = "pyrexia"
version = "0.1.0"
description = "Library to read .tsg file package"
authors = ["Ben <ben@fractalgeoanalytics.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
pandas = "^1.4.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
