[tool.poetry]
name = "pytsg"
version = "0.4.3"
description = "Library to read .tsg file package"
authors = ["Ben <ben@fractalgeoanalytics.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"
pandas = "^1.4.3"
simplejpeg = "^1.6.5"
scipy = "^1.11.4"
[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-gallery = "^0.11.0"
myst-parser = "^0.18.0"
sphinx-autodoc-typehints = "^1.19.1"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
