[project]
name = "pytsg"
version = "0.5.0"
description = "Library to read .tsg file package"
license = "MIT"
readme = "README.md"
dependencies = ["numpy>1.23",'pandas>1.4.3',"simplejpeg>1.6.5","scipy>1.11.4",'dhcomp']

[author]
author='Ben Chi'
url='https://github.com/FractalGeoAnalytics/pytsg'
author_email='ben@fractalgeoanalytics.com'


[project.optional-dependencies]
dev = ["black", "Sphinx>5.1.1","sphinx-rtd-theme>1.0.0","sphinx-gallery>0.11.0","myst-parser>0.18.0","sphinx-autodoc-typehints>1.19.1","matplotlib>3.5.2"]
bigfile = ["zarr>2.16.1"]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tox]
isolated_build = true

